--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 			    </configuration>
 			</plugin>
 		  
-			<plugin>
+			<!--<plugin>
 			  <artifactId>maven-antrun-plugin</artifactId>
 			  <version>1.4</version>
 			  <executions>
@@ -107,7 +107,7 @@
 				  </goals>
 				</execution> 
 			  </executions>
-			</plugin>
+			</plugin>-->
 			
 		</plugins>					
 	</build>	
